# high-performance-computing

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
lab-sheet-01/: Sorts.csv  Timing.csv  plotting.py  timing_of_loops.c  timing_of_loops.h
lab-sheet-02/: openmp_intro.c  openmp_intro.h
